[ACAD-1095] Adjust some footer styling to fix an overflow issue when browser width < 960px

--- a/dev/skins/rsmart/skin.css
+++ b/dev/skins/rsmart/skin.css
@@ -138,7 +138,6 @@ label.signup_form_error_label {
 .fixed-container.s3d-main-container,
 .categories_widget,
 .s3d-page-header,
-.footer_main,
 #allcategories_items_content {
   width: auto !important;
   min-width: 960px;
@@ -174,9 +173,15 @@ label.signup_form_error_label {
 }
 
 /* Footer */
+.footer_main {
+  width: auto !important;
+  min-width: 960px !important;
+}
 .footer_main .fixed-container {
   padding-left: 20px !important;
   padding-right: 20px !important;
+  min-width: 920px;
+  width: auto !important;
 }
 
 .institutionalskinning_widget #institutionalskinning_logo {
